bug 1171728 - Only look for an OuterDoc accessible parent of a proxy if it doesn't have a proxy parent r=lsocks